[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Y.D.X.", email = "73375426+YDX-2147483647@users.noreply.github.com"},
]
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.2",
    "polars>=0.16.4",
    "ruamel.yaml>=0.17.21",
    "adjustText>=0.8.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.scripts]
fmt = "black ."
lint = "ruff check ."
check = {composite = ["fmt", "lint"]}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.1.0",
    "ruff>=0.0.246",
]

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
]
line-length = 88  # Same as black
src = ["xkcd_1491"]
ignore-init-module-imports = true
